# client

./: Cargo.toml  README.md
src/: lib.rs
src/client/: assembler.rs  commands.rs  disassembler.rs  mod.rs  packet_sender.rs  router.rs  ui_connector.rs
src/client/fragmentation/: assembler.rs  disassembler.rs
src/client/handlers/: ack_handler.rs  flooding_handler.rs  fragment_handler.rs  nack_handler.rs  packet_handler.rs
src/client/routing/: edge_stats.rs  mod.rs  networ_discovery.rs  path_finding.rs
src/tests/: commands_tests.rs  edge_stats_tests.rs  fragmentation_tests.rs  mod.rs  routing_tests.rs
src/ui/: mod.rs  request_handler.rs  utils.rs  websocket.rs
src/ui/api/: get_clients.rs  get_registered_users.rs  get_servers.rs  get_static_content.rs  mod.rs  post_register.rs  post_send_message.rs  post_unregister.rs
