[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
common-utils = { git = "https://github.com/Rustbusters/common-utils.git" }
#common-utils = { path = "../common-utils" }
crossbeam-channel = "0.5.14"
rand = "0.9.0-beta.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.5.0"
petgraph = "0.6.5"